--- a/src/main/webapp/resources/css/communityView.css
+++ b/src/main/webapp/resources/css/communityView.css
@@ -37,6 +37,13 @@
 .cm_row{
 	border-bottom: 1px solid #B6B6B6;
 	margin-top : 6px;
+	height:145px;
+
+}
+
+.cm_imgs{
+	position :relative;
+	bottom : 40px;
 }
 .cm_row:hover {
 	cursor: pointer;
@@ -45,16 +52,19 @@
 
 .cm_title{
 	font-weight: bold;
-	font-size: 15px;
+	
 }
 
 .cm_end{
-	padding-top : 30px;
 	text-align: right;
+    align-self: end;
+    max-height: 60px;
+    bottom : 10px;
 }
 
 .cm_ends{
 	margin-left : 9px;
+	
 }
 
 .thumbs{
@@ -65,9 +75,6 @@
 	color : blue;
 }
 
-.cm_content{
-	
-}
 
 .form-control{
 	outline:none;
